# gamecraft-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  activate.sh  gamecraft  init_project.sh  main.py  mypy.ini  pyproject.toml  pytest.ini  setup-alias.sh  test_youtube_only.py  update_igdb_token.py
.claude/agents/: product-launch-strategist.md  whimsy-frontend-dev.md
docs/: API_SETUP_GUIDE.md  PRD.md  agent_handoff_context.md
docs/architecture/: langgraph_architecture.md
docs/sprints/: mvp_sprint_plan.md  sprint_summary.md
src/gamecraft_ai/: config.py  main.py
src/gamecraft_ai/agents/: __init__.py  base_agent.py  classifier.py  event_analyzer.py  game_researcher.py  research_agent.py  script_writer.py  youtube_coach.py
src/gamecraft_ai/graph/: __init__.py  nodes.py  state.py  workflow.py
src/gamecraft_ai/models/: __init__.py  content.py  output.py  query.py
src/gamecraft_ai/services/: __init__.py  igdb.py  llm.py  youtube.py
src/gamecraft_ai/tools/: __init__.py  game_data_tool.py  pytube_tool.py  web_scraping_tool.py
src/gamecraft_ai/ui/: __init__.py  app.py  handlers.py
src/gamecraft_ai/utils/: __init__.py  cache.py  helpers.py  logging.py
tests/: README.md  setup_igdb_token.py  test_apis.py  test_classifier_agent.py  test_classifier_cli.py  test_classifier_research_cli.py  test_llm.py  test_llm_service.py  test_main.py  test_tools.py
